mostly working now

--- a/css/visualizations.css
+++ b/css/visualizations.css
@@ -1,96 +1,93 @@
-/* the default state styles for the visualization tiles in the dialog window. Width and height
-   are set by  */
+/* the default state styles for the visualization tiles in the dialog window. This file is intended for the PUBLIC
+   area: the admin has a separate CSS file included to override relative paths to the images */
 #dv_visualization_dialog {
 	padding: 6px;
 }
 #dv_vis_tiles {
-  list-style: none;
-  padding: 0px;
-	margin: 0px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 #dv_vis_tiles li {
-  background: transparent url(../../../../global/images/loading.gif) no-repeat center center;
-  border: 1px solid #cccccc;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  float: left;
-  margin: 0px 6px 6px 0px;
-  padding: 2px;
+    background: transparent url(../../../global/images/loading.gif) no-repeat center center;
+    border: 1px solid #cccccc;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    float: left;
+    margin: 0 6px 6px 0;
+    padding: 2px;
 }
 .dv_vis_tile_heading {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  height: 21px;
-  padding: 0px 0px 1px 4px;
-  background-color: #efefef;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    height: 21px;
+    padding: 0 0 1px 4px;
+    background-color: #efefef;
 }
 .dv_vis_tile_enlarge {
-	float: right;
-  width: 21px;
-  height: 21px;
-  padding-bottom: 1px;
-  background: #efefef url(../../../../global/images/open_new_window.png) no-repeat center center;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-	cursor: pointer;
+    float: right;
+    width: 21px;
+    height: 21px;
+    padding-bottom: 1px;
+    background: #efefef url(../../../global/images/open_new_window.png) no-repeat center center;
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    cursor: pointer;
 }
 .dv_vis_tile_enlarge:hover {
-  background: #cccccc url(../../../../global/images/open_new_window.png) no-repeat center center;
+    background: #cccccc url(../../../global/images/open_new_window.png) no-repeat center center;
 }
 
 .ui-widget-header span.light_grey {
-  color: #efefef;
-  margin-left: 5px;
+    color: #efefef;
+    margin-left: 5px;
 }
 
 .ui-widget-header span.vis_name {
-  color: #cccccc;
-  margin-left: 5px;
+    color: #cccccc;
+    margin-left: 5px;
 }
 
 #dv_vis_bottom_row {
-  display: none;
-  margin-top:12px
+    display: none;
+    margin-top:12px
 }
 
 #dv_vis_full_nav ul {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 #dv_vis_full_nav ul li {
-  float: left;
+    float: left;
 }
 #dv_vis_full_nav ul li.prev {
 	text-align: left;
 	margin-right: 8px;
 }
 #dv_vis_full_nav ul li.prev span {
-  width: 60px;
-}
-#dv_vis_full_nav ul li.next {
-/*	text-align: right; */
+    width: 60px;
 }
 #dv_vis_full_nav ul li.next span {
-  width: 60px;
+    width: 60px;
 }
 #dv_vis_full_nav ul li.back {
-  text-align: center;
-  margin-right: 8px;
+    text-align: center;
+    margin-right: 8px;
 }
 #dv_vis_full_nav ul li span {
-	padding: 2px 10px;
-  background-color: #efefef;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-  cursor: pointer;
+    padding: 2px 10px;
+    background-color: #efefef;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    cursor: pointer;
 }
 #dv_vis_full_nav ul li span.none {
 	background-color: #ffffff;
@@ -101,39 +98,39 @@
 	background-color: #cccccc;
 }
 #dv_vis_full_nav ul li span.none:hover {
-  background-color: #ffffff;
+    background-color: #ffffff;
 }
 
 .dv_vis_tile_title {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 #dv_vis_cache_info {
-  float: right;
-  color: #999999;
+    float: right;
+    color: #999999;
 }
 #dv_vis_cache_info span {
-  color: #aaaaaa;
+color: #aaaaaa;
 }
 #dv_vis_refresh_cache {
-  float: right;
-  background: transparent url("../../images/refresh.png") no-repeat center center;
-  margin-left: 6px;
-  cursor: pointer;
-  width: 18px;
-  height: 18px;
-  border: 1px solid #dddddd;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+    float: right;
+    background: transparent url("../images/refresh.png") no-repeat center center;
+    margin-left: 6px;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #dddddd;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
 #dv_vis_refresh_cache:hover {
-  border: 1px solid #38bd51;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+    border: 1px solid #38bd51;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
 #no_internet_connection {
-  display: none;
+    display: none;
 }
